# Noir

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  commands.rs  config.rs  editor.rs  file_tree.rs  keybindings.rs  languages.rs  lsp.rs  main.rs  palette.rs  prompt.rs  search.rs  syntax.rs  terminal.rs  theme.rs  ui.rs  util.rs
src/lsp/: client.rs  mod.rs  protocol.rs  transport.rs
src/plugins/: manager.rs  manifest.rs  mod.rs  protocol.rs
