[package]
name = "noir-ide"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.30"
ropey = "1.6"
walkdir = "2"
fuzzy-matcher = "0.3"
portable-pty = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.95"