[package]
name = "noir-ide"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "noir"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.30"
ropey = "1.6"
walkdir = "2"
fuzzy-matcher = "0.3"
portable-pty = "0.9"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
lsp-types = "0.95"